# Machine-Learning-Based-System-for-Cardiopulmonary-Sound-Separation

./: AGENTS.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  MyBib.bib  README.md  Report.tex  neossnet_tree.txt  pyproject.toml  requirements.txt  vcpkg.json
.agents/skills/audio-ml-pipeline/: SKILL.md
.agents/skills/fastapi-backend/: SKILL.md
.agents/skills/fyp-report/: SKILL.md
.agents/skills/hls-dataset/: SKILL.md
.agents/skills/sqlite-schema/: SKILL.md
app/: main.py
app/database/: db.py
app/ml/: neossnet_inference.py
app/models/: db_models.py
app/routers/: results.py  separation.py  upload.py
app/services/: result_service.py  separation_service.py  storage_service.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: index.html
database/: cardiopulmonary.db  schema.sql  seed.sql
datasets/hls_cmds/metadata/: val_split.csv
docs/: IMPLEMENTATION_STATUS.md  database_design.md  demo_steps.md  system_architecture.md  uml.puml
scripts/: check_project.py  clean_dataset_junk.py  test_neossnet_inference.py
sql/: schema.sql
src/: main.cpp
src/api/: results_controller.cpp  upload_controller.cpp
src/core/: model_config.cpp  model_config.h  recording.cpp  recording.h  separation_result.cpp  separation_result.h
src/cpss/: __init__.py
src/cpss/application/: orchestrator.py
src/cpss/domain/: models.py  strategy.py
src/cpss/infrastructure/: factory.py  (+2 more)
src/processing/: audio_processor.cpp  audio_processor.h  neossnet_strategy.cpp  neossnet_strategy.h  pipeline_factory.cpp  pipeline_factory.h  separation_strategy.cpp  separation_strategy.h
src/services/: notification_center.cpp  notification_center.h  separation_service.cpp  separation_service.h
src/storage/: result_repository.cpp  result_repository.h  sqlite_manager.cpp  sqlite_manager.h
static/: style.css
templates/: results.html  upload.html
tests/: conftest.py  test_notification_center.cpp  test_orchestrator.py  test_results.py  test_service.cpp  test_strategy.py  test_strategy_and_factory.cpp
(+3 files in other folders)
